added set ether base api
